# AstrumLang

./: .clang-format  .gitignore  AstrumChecks.ruleset  AstrumCompilerSettings.cpp  AstrumCompilerSettings.h  CMakeLists.txt  CppAdvanceCodegen.cpp  CppAdvanceCodegen.h  CppAdvanceLexer.cpp  CppAdvanceLexer.g4  CppAdvanceLexer.h  CppAdvanceLexer.interp  CppAdvanceLexer.tokens  CppAdvanceLexerBase.cpp  CppAdvanceLexerBase.h  CppAdvanceLib.lib  CppAdvanceParser.cpp  CppAdvanceParser.g4  CppAdvanceParser.h  CppAdvanceParser.interp  CppAdvanceParser.tokens  CppAdvanceParserBaseListener.cpp  CppAdvanceParserBaseListener.h  CppAdvanceParserErrorListener.cpp  CppAdvanceParserErrorListener.h  CppAdvanceParserListener.cpp  CppAdvanceParserListener.h  CppAdvanceSema.cpp  CppAdvanceSema.h  CppSymbolParser.cpp  CppSymbolParser.h  FirstProgram.adv  FirstProgram.cpp  FirstProgram.cppx  FirstProgram.exp  FirstProgram.h  FirstProgram.lib  Functions.adv  FutureC.g4  FutureC.interp  (+27 more)
AstrumCompiler/: CMakeLists.txt  astrum_build.bat
AstrumCompiler/include/: Compiler.h  CompilerErrorListener.h
AstrumCompiler/src/: Compiler.cpp  CompilerErrorListener.cpp  main.cpp
AstrumCompiler/tests/: FirstProgram.ast  FirstProgram.cpp  FirstProgram.h  package.h
AstrumCompiler/tests/System/Application/: Collections.ast  Collections.cpp  Collections.h
AstrumLang/: CMakeLists.txt  CMakePresets.json
AstrumLang/grammar/: AstrumLexer.g4  AstrumParser.g4  UnixGenerateParser.sh  WinGenerateParser.bat  antlr_format.bat
AstrumLang/include/AstrumLang/: AstrumCodegen.h  AstrumErrorListener.h  AstrumLexer.h  AstrumLexerBase.h  AstrumParser.h  AstrumParserBaseVisitor.h  AstrumParserVisitor.h  AstrumSema.h  CompilerSettings.h  CppSymbolParser.h  SourcePosition.h  StringUtils.h  export.h
AstrumLang/src/AstrumLang/: AstrumCodegen.cpp  AstrumErrorListener.cpp  AstrumLexer.cpp  AstrumLexerBase.cpp  AstrumParser.cpp  AstrumParserBaseVisitor.cpp  AstrumParserVisitor.cpp  AstrumSema.cpp  CompilerSettings.cpp  CppSymbolParser.cpp
AstrumStdLib/: CMakeLists.txt  astrum_build.bat
AstrumStdLib/include/: ASTRUMSTD_export.h  test_main.cpp
AstrumStdLib/include/Builtin/: Boolean.h  Builtin.h  BuiltinInt128.h  Char.h  CheckedArithmetic.h  CompilerUtils.h  DebugPrint.h  Decimal.h  Defer.h  Exceptions.h  FastInt.h  Floating.h  FuncParameterMode.h  FunctionRef.h  InlineArray.h  Int128.h  Integer.h  LocalFunctions.h  RawPtr.h  RefCounts.h  SafeInt.h  Str.h  StringUtils.h  Tests.h  Types.h  UnsafeContext.h
AstrumStdLib/include/System/: Boolean.ast  Boolean.cpp  Boolean.h  CInterop.h  Float128.ast  Float128.cpp  Float128.h  Float128_Exp.ast  Float128_Exp.cpp  Float128_Exp.h  Float128_Log.ast  Float128_Log.cpp  Float128_Log.h  Float128_Pow.ast  Float128_Pow.cpp  Float128_Pow.h  Float128_Trig.ast  Float128_Trig.cpp  Float128_Trig.h  Float16.ast  Float16.cpp  Float16.h  Float32.ast  Float32.cpp  Float32.h  Float64.ast  Float64.cpp  Float64.h  FloatingPointCategory.ast  FloatingPointCategory.cpp  FloatingPointCategory.h  IComparable.ast  IComparable.cpp  IComparable.h  IConvertible.ast  IConvertible.cpp  IConvertible.h  IEquatable.ast  IEquatable.cpp  IEquatable.h  (+43 more)
AstrumStdLib/include/System/Numerics/: IAdditionOperators.ast  IAdditionOperators.cpp  IAdditionOperators.h  IBinaryFloatFormatInfo.ast  IBinaryFloatFormatInfo.h  IBinaryFloatingPointIeee754.ast  IBinaryFloatingPointIeee754.h  IBinaryInteger.ast  IBinaryInteger.cpp  IBinaryInteger.h  IBinaryIntegerFormatInfo.ast  IBinaryIntegerFormatInfo.cpp  IBinaryIntegerFormatInfo.h  IBinaryNumber.ast  IBinaryNumber.cpp  IBinaryNumber.h  IBitwiseOperators.ast  IBitwiseOperators.cpp  IBitwiseOperators.h  ICheckedArithmetic.ast  ICheckedArithmetic.h  IDecrementOperators.ast  IDecrementOperators.cpp  IDecrementOperators.h  IDivisionOperators.ast  IDivisionOperators.cpp  IDivisionOperators.h  IExponentialFunctions.ast  IExponentialFunctions.h  IFixedWidthInteger.ast  IFixedWidthInteger.cpp  IFixedWidthInteger.h  IFloatingPoint.ast  IFloatingPoint.h  IFloatingPointConstants.ast  IFloatingPointConstants.h  IFloatingPointIeee754.ast  IFloatingPointIeee754.h  IHyperbolicFunctions.ast  IHyperbolicFunctions.h  (+49 more)
AstrumStdLib/src/Builtin/: Builtin.cpp  BuiltinInt128.cpp  Int128.cpp  RefCounts.cpp  Types.cpp
System/Application/: Collections.adv  Collections.cpp  Collections.h
